# FaderBridge

./: .gitignore  LICENSE  PROJECT_JOURNAL.md  README.md  SETUP.md  index.html  package-lock.json  package.json  tailwind.config.js  test_midi.sh  tsconfig.json  vite.config.ts  vitest.config.ts
Docs/: ARCHITECTURE_DECISIONS.md  FEATURE_PRIORITIZATION.md  HARDWARE_TEST_REPORT.md  INTEGRATION_PLAN.md  PERFORMANCE_METRICS.md  PRD_FaderBridge.md  PROJECT_CHARTER.md  SE24_PARAMETER_REFERENCE.md  SETUP_GUIDE.md  STYLE_GUIDE.md  TASK_MANAGEMENT_RULES.md  TESTING_STRATEGY.md  TROUBLESHOOTING.md  USB_PROTOCOL_FINDINGS.md
Tasks/: DEPENDENCY_GRAPH.md  README.md  TASK-001-ucnet-device-discovery.md  TASK-002-midi-device-enumeration.md  TASK-005-midi-learn.md  (+15 more)
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: test_connect.rs  test_connect2.rs  test_midi.rs
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: learn.rs  midi.rs  mod.rs  projects.rs  sync.rs  sync_integration.rs  ucnet.rs
src-tauri/src/db/: connection.rs  devices.rs  error.rs  export.rs  mappings.rs  mod.rs  projects.rs  projects_test.rs  schema.sql  types.rs
src-tauri/src/midi/: connection.rs  device_database.rs  enumeration.rs  error.rs  learn.rs  mcu_protocol.rs  mod.rs  types.rs
src-tauri/src/sync/: engine.rs  mod.rs  shadow_state.rs
src-tauri/src/translation/: mapper.rs  mod.rs  taper.rs  types.rs
src-tauri/src/ucnet/: connection.rs  discovery.rs  error.rs  mod.rs  protocol.rs  types.rs
(+93 files in other folders)
