[package]
name = "faderbridge"
version = "0.1.0"
description = "A professional MIDI-to-UCNet bridge for PreSonus hardware"
authors = ["FaderBridge Contributors"]
license = "MIT"
repository = "https://github.com/bpierce444/FaderBridge"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
thiserror = "2.0"

# MIDI support
midir = "0.10.3"

# USB support
rusb = "0.9"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
mockall = "0.13"
tempfile = "3.8"
uuid = { version = "1.0", features = ["v4"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another for better optimization
lto = true        # Enable link-time optimization
opt-level = "z"   # Optimize for size
strip = true      # Remove debug symbols
